{{$NEXT}}

2.000     2017-02-11 17:03:53 EST
  - Add support for generating queries with SQL::Abstract. (based on Mojo::Pg 3.0)
  - Add abstract attribute to Mojo::SQLite.
  - Add delete, insert, select, and update methods to Mojo::SQLite::Database.

1.004     2017-01-17 00:10:51 EST
  - Use Mojo::File from Mojolicious 7.15 instead of deprecated
    Mojo::Util slurp function. (#9)

1.003     2016-12-11 16:30:31 EST
  - Add links to alternatives for deprecated Mojo::SQLite::PubSub.

1.002     2016-11-30 11:17:56 EST
  - Improved contextual caller information in query error messages. (#6)
  - Fix memory leak when reusing the same database handle many times. (#7)

1.001     2016-11-15 02:32:27 EST
  - Deprecate Mojo::SQLite::PubSub and associated methods and attributes.
    SQLite's serverless nature means it does not have the ability to support
    client notifications, so it is not possible to implement an efficient
    pubsub system as in for example PostgreSQL, Redis, or websockets.

1.000     2016-08-17 21:01:31 EDT
  - Bump version to 1.000 as this distribution is considered stable
  - Added database_class attribute to Mojo::SQLite and results_class attribute
    to Mojo::SQLite::Database to make it easier for these classes to be extended
  - Fixed a few fork-safety bugs and memory leaks in Mojo::SQLite::PubSub

0.022     2016-07-14 16:59:36 EDT
  - Improve expand performance slightly
  - Add support for encoding and decoding of JSON notifications
  - Add json method to Mojo::SQLite::PubSub
  - Fix bug where poll_interval in Mojo::SQLite::PubSub was not correctly used
  - Fix case where notifications from other connections could be lost

0.021     2016-02-15 01:58:40 EST
  - Lower dependency on DBI to 1.627
  - Remove dependency on URI::QueryParam

0.020     2016-02-14 17:53:55 EST
  - Bump dependency on DBD::SQLite to 1.50 for JSON1 extension support
  - Add support for json parameters to query method in Mojo::SQLite::Database