@@ -1,4 +1,6 @@
 {{$NEXT}}
+  - Set name_sep in default SQL::Abstract object to support proper quoting of
+    table and column names.
 
 2.000     2017-02-11 17:03:53 EST
   - Add support for generating queries with SQL::Abstract. (based on Mojo::Pg 3.0)
